<resources>
    <string name="app_name">Notification</string>
    <string name="show_simple_notification">Show Simple Notification</string>
    <string name="long_dummy_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed leo consectetur,
        iaculis felis non, porta urna. Integer vulputate nisl at massa facilisis fringilla.
        Ut egestas, eros placerat placerat accumsan, orci velit finibus sem, in placerat lorem dolor in odio.
        Mauris auctor tortor eget quam facilisis commodo. Nulla in auctor justo, dapibus pharetra elit.
        Nam malesuada gravida porttitor.
        Integer placerat, est condimentum facilisis commodo, magna magna sodales dolor, non vestibulum risus tellus ut nibh.
        Donec accumsan mauris quis libero ullamcorper, sed tincidunt purus lobortis.
        Nunc sed leo vel est ullamcorper aliquet id eget dolor. Maecenas imperdiet lorem pellentesque,
        finibus risus in, mollis dui. Cras bibendum risus id rutrum sagittis. Donec ullamcorper, nisi vel rhoncus ullamcorper,
        urna ligula pretium nunc, at volutpat ex erat bibendum metus.
    </string>
    <string name="big_text">Big Text</string>
    <string name="big_image">Big Image</string>
    <string name="messaging_with_reply">MESSAGING With REPLY</string>
    <string name="messaging_with_replyc">Messaging With Reply</string>
    <string name="custom_notification">Custom Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_fragment_notification">open Fragment Notification</string>
    <string name="music_app_notification">music App Notification</string>
</resources>