<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">


        <Button
            android:id="@+id/showNotificationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/show_simple_notification"
            app:layout_constraintBottom_toTopOf="@id/messagingWithReply"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/messagingWithReply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/messaging_with_reply"
            app:layout_constraintBottom_toTopOf="@+id/customNotification"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/showNotificationButton" />

        <Button
            android:id="@+id/customNotification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/custom_notification"
            app:layout_constraintBottom_toTopOf="@id/openFragmentNotification"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/messagingWithReply" />

        <Button
            android:id="@+id/openFragmentNotification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/open_fragment_notification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/customNotification" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>